# FastAPI-Messenger

./: .dockerignore  Makefile  README.md  docker-compose-test.yml  docker-compose.yml  main.py  pyproject.toml  settings.env  settings.env.test  settings.test.env
.pgdata/base/1/: 2619  2619_fsm  2619_vm  2696  2840  2840_fsm  2841
.pgdata/base/16384/: 1247  1249  1249_fsm  1259  2224  24595  24596  24608  24609  24611  2579  2604  2606  2608  2608_fsm  2610  2610_fsm  2619  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
.pgdata/base/5/: 2619
.pgdata/global/: 1260  1262  2396  2671  pg_control  pg_internal.init
.pgdata/pg_xact/: 0000
src/app/api/v1/: __init__.py  auth.py  chat.py  chat_direct.py  chat_group.py  invitation.py  user.py  ws.py
src/app/aws/: __init__.py  deps.py  s3.py  s3_storage.py
src/app/core/: base.py  cache.py  db.py  lifespan.py  settings.py  task_broker.py
src/app/crud/: base.py  chat.py  chat_direct.py  chat_group.py  chat_relationships.py  chat_relationships_crud.py  facroty.py  invitation.py  messege_crud.py  user.py
src/app/exc/: auth.py  chat.py  ffmpeg_tools.py  file.py  user.py
src/app/models/: __init__.py  chat.py  chat_direct.py  chat_group.py  chat_relationships.py  invitation.py  messege.py  user.py
src/app/schemas/: auth.py  base.py  chat.py  chat_direct.py  chat_group.py  user.py  websocket.py
src/app/services/: avatar_manager.py  ffmpeg_tools.py  s3.py
src/app/services/security/: __init__.py  black_list.py  hash.py  token.py  totp.py
src/app/tasks/: file.py
src/app/websocket/: dispatcher.py  manager.py  messeger.py  ws.py
src/tests/: conftest.py
src/tests/api/v1/: test_auth.py  test_chat_direct.py  test_chat_group.py  test_user.py
src/tests/crud/: test_chat_direct_crud.py  test_chat_messege.py  test_chat_relationships_crud.py  test_user.py  test_user_crud.py
src/tests/factories/: base.py  chat.py  chat_group.py  chat_relationships.py  invitation.py  messege.py  user.py
