[project]
name = "messager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.5.0",
    "asyncpg>=0.31.0",
    "faker>=40.21.0",
    "fastapi>=0.136.3",
    "mypy>=2.1.0",
    "numpy>=2.5.0",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "pyopt>=0.84",
    "pyotp>=2.9.0",
    "pytest-asyncio>=1.4.0",
    "pytest-env>=1.6.0",
    "python-ffmpeg>=2.0.12",
    "python-magic>=0.4.27",
    "qrcode>=8.2",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.50",
    "taskiq-redis>=1.2.3",
    "taskiq[redis]>=0.12.4",
    "types-aioboto3[essential]>=15.5.0",
    "uvicorn>=0.49.0",
]
