[project]
name = "messager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.5.0",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "factory-boy>=3.3.3",
    "fastapi>=0.136.3",
    "ffmpeg-python>=0.2.0",
    "httpx>=0.28.1",
    "numpy>=2.5.0",
    "pillow>=12.3.0",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "pyopt>=0.84",
    "pyotp>=2.9.0",
    "python-ffmpeg>=2.0.12",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.32",
    "qrcode>=8.2",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.50",
    "taskiq-redis>=1.2.3",
    "types-aioboto3[essential]>=15.5.0",
    "types-qrcode>=8.2.0.20260518",
    "uvicorn>=0.49.0",
    "websockets>=16.1",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "faker>=40.21.0",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-env>=1.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/test"]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.pytest_env]
TEST = "true"

[tool.mypy]
explicit_package_bases = true
mypy_path = "."

